--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,83 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --foreground-rgb: 0, 0, 0;
+  --background-rgb: 255, 255, 255;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(var(--foreground-rgb));
+  background: rgb(var(--background-rgb));
+  min-height: 100vh;
+}
+
+@keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+} 
+
+@-webkit-keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+.fade-in {
+  -webkit-animation-duration: 0.5s;
+  animation-duration: 0.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+
+.loading_page {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: radial-gradient(circle at 50% 50%, #ff9cdb 25%, #ff5fc1 50%, #ff31a6 75%, #f51486 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  animation: fadeOut 1s ease-in-out 8s forwards;
+}
+
+.loading_page svg path {
+  fill: transparent;
+  stroke: black;
+  stroke-width: 0.3px;
+  stroke-dasharray: 100;
+  animation: textAnimation 8s ease-in-out;
+}
+
+@keyframes textAnimation {
+  0% {
+    stroke-dashoffset: 100;
+  }
+  50% {
+    fill: transparent;
+  }
+  80% {
+    stroke-dashoffset: 0;
+    stroke: black;
+  }
+  100% {
+    fill: black;
+    stroke-dashoffset: 0;
+    stroke: black;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
