--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,13 @@ body {
   }
 }
 
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 @keyframes fadeOut {
   from {
     opacity: 1;
